--- a/package.json
+++ b/package.json
@@ -15,10 +15,11 @@
     "date-fns": "^2.27.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-helmet": "^6.1.0",
+    "react-helmet-async": "^1.2.2",
     "react-icons": "^4.3.1",
     "react-responsive-carousel": "^3.2.22",
     "react-router-dom": "^6.2.1",
+    "react-router-hash-link": "^2.4.3",
     "react-scripts": "5.0.0",
     "simple-react-lightbox": "^3.6.9-0",
     "typescript": "^4.5.4",
@@ -49,6 +50,7 @@
     ]
   },
   "devDependencies": {
+    "@types/react-router-hash-link": "^2.4.4",
     "sass": "^1.45.1"
   }
 }
